# cxwman

./: .bct  .buildrc  .clang-format  .gitignore  CMakeLists.txt  README.md
dep/local/cxprotocol/: CMakeLists.txt
dep/local/cxprotocol/src/: library.cpp  library.h
dep/local/cxprotocol/tests/: main.cpp
devdoc/: index.md
misc/: runxephyr.sh  test.sh  xinitrc
src/: main.cpp
src/coreutils/: core.hpp
src/datastructure/: container.cpp  container.hpp  geometry.cpp  geometry.hpp  tree.hpp
src/ipc/: UnixSocket.cpp  UnixSocket.h  ipc.cpp  ipc.hpp
src/xcom/: configuration.cpp  configuration.hpp  connect.cpp  connect.hpp  constants.hpp  container.cpp  container.hpp  core.hpp  events.cpp  events.hpp  manager.cpp  manager.hpp  status_bar.cpp  status_bar.hpp  window.cpp  window.hpp  workspace.cpp  workspace.hpp  xinit.cpp  xinit.hpp
src/xcom/commands/: manager_command.cpp  manager_command.hpp
src/xcom/gfx/: drawing.cpp  drawing.hpp
src/xcom/utility/: config.cpp  config.hpp  event_table.hpp  key_config.cpp  raii.cpp  raii.hpp  xinit.cpp  xinit.hpp
src/xcom/utility/drawing/: util.cpp  util.h
src/xcom/utility/logging/: formatting.cpp  formatting.h
tests/: test_protocol.cpp  window_event_graphics.cpp  window_with_button.cpp  xcb_draw_primitives.cpp  xcb_glx.cpp  xcb_test.cpp
